[package]
name = "bitmath"
version = "0.0.2"
edition = "2021"
authors = ["trashbyte"]
license = "MIT"
description = "Tools for arbitrary-sized bitwise arithmetic"
repository = "https://github.com/trashbyte/bitmath"
readme = "README.md"
keywords = ["bits", "width", "bitwise", "overflow", "twos_complement"]
categories = ["data-structures", "emulators", "hardware-support", "mathematics"]

[lib]
name = "bitmath"
path = "src/lib.rs"

[dependencies]
